[Fix] "UI alignments of dropdown buttons"

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1046,12 +1046,14 @@ td {
   background-color: #fff;
   border: 1px solid #ddd;
   padding: 12px 20px;
-  font-size: 10px;
+  font-size: 14px;
   color: #888;
   cursor: pointer;
   border-radius: 5px;
-  width: 130px;
+  width: fit-content;
+  min-width: 130px;
   text-align: left;
+  height: 100%;
 }
 
 @media (max-width: 600px) {
@@ -1064,6 +1066,13 @@ td {
     width: 100%;
   }
 }
+/* @media (max-width: 400px) {
+  .dropdown-container {
+    display: grid;
+    grid-template-columns: 1fr ;
+  }
+
+} */
 
 .dropdown-menu {
   display: none;
